# AutomatedSkinSizeConverter

./: .classpath  .gitignore  .project  Cargo.toml  README.md
src/: main.rs
src/cdtb/: binary_parser.rs  cdtb.rs  hash_file.rs  hashes.rs  mod.rs  wad.rs
src/converter/: control.rs  export.rs  file_converter.rs  main_gui.rs  mod.rs  skin_rescaler.rs
src/converter_gui/: main_gui.rs  mod.rs
src/core/: AutomationMain.java  BackgroundConverting.java  CDTBExecution.java  Control.java  CreateFolders.java  CreateOptionsFile.java  CslolIntegrator.java  ExecuteProgramm.java  ExecuteRitobin.java  GetPythonPath.java  Gui.java  InstallDependencies.java  LegendarySkins.java  Logger.java  ResourceMonitor.java  UnpackExe.java  UnpackWAD.java  VersionChecker.java  WriteIntoPy.java  test.java
src/data/: options.rs
src/test/: OPythonPath.java  TestingWithThreads.java
