[package]
name = "AutomatedSkinSizeConverter"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.33.3"
serde = { version = "1.0.228", features = ["derive"] }
reqwest = { version = "0.13.2" , features = ["blocking"] }
rayon = "1.11.0"
zstd = "0.13.3"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
glob = "0.3"
rustc-hash = "2.1.1"
