[package]
name = "AutomatedSkinSizeConverter"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.35.0"
serde_json = "1.0.145"
walkdir = "2.5.0"
reqwest = { version = "0.13.2" , features = ["blocking"] }
rayon = "1.11.0"
zstd = "0.13.3"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
glob = "0.3"
rustc-hash = "2.1.2"
chrono = "0.4.45"
zip = "2"
imghdr = "0.7.0"